--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,20 +15,27 @@ body {
 }
 
 .container {
+    background-color: #282828;
+    border-radius: 10px;
     padding: 20px 10px;
     margin: 50px auto;
-    width: 100%;
+    width: 70%;
     height: auto;
-    display: flex;
-    flex-direction: row;
+    /* display: flex; */
+    /* flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, 1fr);
+    place-items: center;
+    gap: 10px;
 }
 
 .custom-btn {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,7 +45,7 @@ body {
     margin: 10px;
     cursor: pointer;
     transition: all 0.3s ease;
-    background-color: #b3b3b3;
+    background-color: #a3a3a3;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
