--- a/style.css
+++ b/style.css
@@ -21,25 +21,19 @@ body {
     margin: 50px auto;
     width: 70%;
     height: auto;
-    /* display: flex; */
-    /* flex-direction: row;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap; */
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(3, 1fr);
-    place-items: center;
-    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .custom-btn {
-    width: 150px;
+    position: relative;
+    max-width: 150px;
+    width: 100%;
     height: 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    flex: 1 1 150px;
     border: none;
     border-radius: 10px;
     margin: 10px;
