--- a/style.css
+++ b/style.css
@@ -14,12 +14,21 @@ body {
     align-items: center;
 }
 
+main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
     background-color: #282828;
     border-radius: 10px;
     padding: 20px 10px;
-    margin: 50px auto;
-    width: 70%;
+    margin: 50px 0;
+    width: 75%;
     height: auto;
     display: flex;
     flex-direction: row;
